# Helply

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  gen_raf_nav.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirement.txt  setup.py  sitemap.xml
css/: material.css  mkdocstrings.css
docs/: gen_raf_nav.py  index.md  license.md
docs/examples/: advanced.md  autocomplete.md  extras.md  simple.md
examples/: autocomplete.py  basic.py
examples/advanced/: index.html
examples/autocomplete/: index.html
examples/extras/: index.html
examples/simple/: index.html
license/: index.html
reference/SUMMARY/: index.html
reference/helply/help/: index.html
reference/helply/helply/: index.html
reference/helply/types/abc_/: index.html
reference/helply/types/argument/: index.html
reference/helply/types/checks/: index.html
reference/helply/types/commands/: index.html
reference/helply/types/enums/: index.html
reference/helply/types/localized/: index.html
reference/helply/utils/embeds/: index.html
reference/helply/utils/paginator/: index.html
search/: search_index.json
src/helply/: __init__.py  __wrappers.py  errors.py  help.py  helply.py
src/helply/handlers/: disnake_handler.py  nextcord_handler.py
src/helply/types/: __init__.py  abc_.py  argument.py  checks.py  commands.py  enums.py  localized.py
src/helply/utils/: __init__.py  embeds.py  paginator.py  utils.py
tests/: bot.py  localization.py  nextcord_bot.py
tests/locale/: de.json  es_ES.json
