[tool.poetry]
name = "helply"
version = "0.1.0"
description = "A library that simplifies 'help' command creation for application commands in your discord bot."
authors = ["DLCHAMP <contact@dlchamp.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dlchamp/helply"
homepage = "https://github.com/dlchamp/helply"
keywords = [
    "disnake",
    "discord",
]

classifiers=[
        "Development Status :: 4 - Beta",
        "License :: OSI Approved :: MIT License",
        "Intended Audience :: Developers",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Topic :: Software Development :: Libraries",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Utilities",
        "Typing :: Typed",
    ]

packages = [
    { include = "helply", from = "src" }
]


[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
pyright = "^1.1.318"
python-dotenv = "^1.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.1"
mdx-truly-sane-lists = "^1.3"
mkdocs-markdownextradata-plugin = "^0.2.5"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-material = "^9.1.21"
mkdocs-autorefs = "^0.4.1"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"



[tool.poetry.group.lint.dependencies]
disnake = "^2.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
target-version = ["py38", "py39","py310","py311"]

[tool.ruff.isort]
combine-as-imports = true

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.8"
ignore = ["tests/", "examples/", "docs/"]

[tool.ruff]
line-length = 100


[tool.ruff.pydocstyle]
convention = "numpy"
